kubernetes/apps/network/echo/app/service.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: network
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: echo
    app.kubernetes.io/instance: echo
    app.kubernetes.io/controller: echo
